# Robotic_Horse

./: .gitignore  INSTRUCTIONS.md  INSTRUCTIONS2.0.md  README.md  main.py  requirements.txt
blender/: INSTRUCTIONS.md  create_armature.py  export_animation.py  export_gait.py  load_gait.py
gazebo/: INSTRUCTIONS.md
pybullet/: pybullet_sim.py  run_pybullet.py
reference/: bull-osteology-illustrations-general.avif
research/: blender_gait_workflow.md  bovine_gait_biomechanics.md  carriage_analysis.md  highland_cow_anatomy.md  qdd_actuation_analysis.md  robot_build_plan.md
robot/gait/: walk_gait.py
robot/kinematics/: force_calculator.py  leg_kinematics.py
robot/simulation/: pybullet_sim.py
robot/urdf/: robotic_horse.urdf
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/robotic_horse_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/robotic_horse_control/animations/: turn_left.json  walk_forward.json
ros2_ws/src/robotic_horse_control/config/: leg_controller.yaml  ros2_control.yaml
ros2_ws/src/robotic_horse_control/launch/: blendspace.launch.py  full_sim.launch.py  gazebo.launch.py
ros2_ws/src/robotic_horse_control/robotic_horse_control/: blendspace_node.py  force_node.py  gait_node.py  teleop_key.py
ros2_ws/src/robotic_horse_control/worlds/: robotic_horse.world
ros2_ws/src/robotic_horse_description/: CMakeLists.txt  package.xml
ros2_ws/src/robotic_horse_description/launch/: display.launch.py
ros2_ws/src/robotic_horse_description/rviz/: robotic_horse.rviz
scripts/: generate_animations.py
(+47 files in other folders)
